[gd_scene load_steps=6 format=2]

[ext_resource path="res://Capa_Site_Runway.png" type="Texture" id=1]
[ext_resource path="res://Fonte.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://TelaInicial.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 17
outline_color = Color( 0.141176, 0.0431373, 0.0431373, 1 )
extra_spacing_space = -7
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 13
extra_spacing_space = -7
font_data = ExtResource( 2 )

[node name="Node2D" type="Node2D"]
position = Vector2( 562, 302 )
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -560.0
margin_top = -306.0
margin_right = 455.0
margin_bottom = 291.0
color = Color( 0, 0, 0, 0.572549 )

[node name="btnStart" type="Button" parent="."]
margin_left = 52.0
margin_top = -116.0
margin_right = 242.0
margin_bottom = -64.0
grow_horizontal = 0
grow_vertical = 0
rect_scale = Vector2( 1.38164, 1.37324 )
focus_neighbour_left = NodePath(".")
mouse_filter = 1
mouse_default_cursor_shape = 2
input_pass_on_modal_close_click = false
size_flags_horizontal = 15
size_flags_vertical = 15
custom_colors/font_color_focus = Color( 0.227451, 0, 0, 0.529412 )
custom_colors/font_color_hover = Color( 0.341176, 0.0117647, 0.0117647, 1 )
custom_colors/font_color_pressed = Color( 0.341176, 0.0117647, 0.0117647, 1 )
custom_fonts/font = SubResource( 1 )
toggle_mode = true
action_mode = 0
button_mask = 7
keep_pressed_outside = true
text = "START GAME"
flat = true
icon_align = 1
expand_icon = true

[node name="btnCredits" type="Button" parent="."]
margin_left = 118.0
margin_top = -48.0
margin_right = 228.0
margin_bottom = -25.0
rect_clip_content = true
mouse_default_cursor_shape = 2
custom_colors/font_color_hover = Color( 0.341176, 0.0117647, 0.0117647, 1 )
custom_colors/font_color_pressed = Color( 0.341176, 0.0117647, 0.0117647, 1 )
custom_fonts/font = SubResource( 2 )
action_mode = 0
button_mask = 7
keep_pressed_outside = true
text = "CREDITS"
flat = true

[node name="btnQuit" type="Button" parent="."]
margin_left = 118.0
margin_top = -9.0
margin_right = 228.0
margin_bottom = 14.0
rect_clip_content = true
mouse_default_cursor_shape = 2
custom_colors/font_color_hover = Color( 0.341176, 0.0117647, 0.0117647, 1 )
custom_colors/font_color_pressed = Color( 0.341176, 0.0117647, 0.0117647, 1 )
custom_fonts/font = SubResource( 2 )
action_mode = 0
button_mask = 7
keep_pressed_outside = true
text = "QUIT"
flat = true

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.886275, 0.8, 0.8, 1 )
self_modulate = Color( 0.905882, 0.905882, 0.905882, 1 )
position = Vector2( -54, -7 )
scale = Vector2( 0.715278, 0.747064 )
texture = ExtResource( 1 )

[node name="Jogar" type="Label" parent="."]
margin_left = 108.0
margin_top = -109.0
margin_right = 160.0
margin_bottom = -81.0
rect_scale = Vector2( 3, 3 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 0.839216 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.913725 )
custom_constants/shadow_offset_x = 2
custom_constants/line_spacing = 0
custom_constants/shadow_offset_y = 2
custom_constants/shadow_as_outline = 0
text = "JOGAR
"
align = 1
valign = 1

[node name="creditos" type="Label" parent="."]
margin_left = 136.0
margin_top = -48.0
margin_right = 199.0
margin_bottom = -6.0
rect_scale = Vector2( 1.5, 1.5 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 0.839216 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.913725 )
custom_constants/shadow_offset_x = 2
custom_constants/line_spacing = 0
custom_constants/shadow_offset_y = 2
custom_constants/shadow_as_outline = 0
text = "CREDITOS

"
align = 1
valign = 1

[node name="quit" type="Label" parent="."]
margin_left = 134.0
margin_top = -5.0
margin_right = 197.0
margin_bottom = 37.0
rect_scale = Vector2( 1.5, 1.5 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 0.839216 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.913725 )
custom_constants/shadow_offset_x = 2
custom_constants/line_spacing = 0
custom_constants/shadow_offset_y = 2
custom_constants/shadow_as_outline = 0
text = "QUIT


"
align = 1
valign = 1

[connection signal="pressed" from="btnStart" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="btnCredits" to="." method="_on_btnCredits_pressed"]
[connection signal="pressed" from="btnQuit" to="." method="_on_btnQuit_pressed"]
[connection signal="pressed" from="btnQuit" to="." method="_on_btnCredits_pressed"]
